# logos-inspector

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRODUCT.md  README.md  SECURITY.md  build-artifacts.json  flake.nix  metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml  release-alpha.yml  release-core.yml  release-standalone.yml  release-ui.yml
core/: CMakeLists.txt  metadata.json
core/lib/: logos_inspector_core.h
core/src/: logos_inspector_async_bridge.cpp  logos_inspector_async_bridge.h  logos_inspector_host_transport.h  logos_inspector_impl.cpp  logos_inspector_impl.h  logos_inspector_production.cpp  logos_protocol_host_transport.cpp  logos_protocol_host_transport.h
core/tests/: CMakeLists.txt  test_logos_inspector_async_bridge.cpp  test_logos_inspector_composed_host_integration.cpp  test_logos_protocol_host_transport.cpp
core/tests/include/: logos_module_context.h
crates/core-ffi/: Cargo.toml
crates/core-ffi/include/: logos_inspector_core.h
crates/core-ffi/src/: lib.rs
crates/lee-inspect/: Cargo.toml
crates/lee-inspect/src/: main.rs
crates/lez-inspect/: Cargo.toml
crates/lez-inspect/src/: main.rs
crates/standalone-gui/: Cargo.toml  build.rs
crates/standalone-gui/src/: bridge.rs  main.rs  runtime.rs
crates/testnet-v02-helper/: Cargo.toml
crates/testnet-v02-helper-protocol/: Cargo.toml
crates/testnet-v02-helper-protocol/src/: lib.rs
crates/testnet-v02-helper/src/: main.rs
docs/: inspect-and-interact.md  release-process.md  testnet-operations.md
nix/: source-sets.nix
nix/logos-protocol-overlay/: flake.nix
packaging/: Info.plist.in  logos-inspector.desktop
qml/: AppShell.qml  Main.qml  StandaloneMain.qml
qml/components/: AccountDetailPane.qml  ActionButton.qml  BlockDetailPane.qml  ChannelDetailPane.qml  FieldRow.qml  LayerBadge.qml  LinkCell.qml  ListToolbar.qml  MetricCard.qml  NavRail.qml  PageHeader.qml  PagedInspectionTable.qml  Panel.qml  ResultPane.qml  SearchChoiceList.qml  SocialPanel.qml  SourceStrip.qml  StatusBar.qml  StatusFooter.qml  StatusMessage.qml  TabSwitch.qml  TextAreaField.qml  TransactionDetailPane.qml  TransferRecipientDetailPane.qml  WalletDetailPane.qml
qml/pages/: AccountsPage.qml  BlockDetailPage.qml  BlocksPage.qml  ChannelsPage.qml  DeliveryAppPage.qml  DeliveryPage.qml  FavoritesPage.qml  IndexerPage.qml  LezBlocksPage.qml  LezTransactionsPage.qml  LocalNodesPage.qml  LocalWalletPage.qml  ModulePage.qml  OverviewPage.qml  ProgramsPage.qml  SequencerPage.qml  SettingsPage.qml  StorageAppPage.qml  StoragePage.qml  TransactionDetailPage.qml  TransactionsPage.qml  TransferActivityPage.qml  WalletsPage.qml
qml/services/: BridgeClient.qml  BridgeEnvelope.js  BridgeHelpers.js
qml/state/: AppModel.qml  AppRequestState.qml  AppShellState.qml  ChainPageSession.qml  ConfirmationPolicy.js  DeliveryAppState.qml  EntityNavigationSession.qml  FavoritesState.qml  IdlRegistryState.qml  ListenerScheduler.qml  LocalNodesState.qml  LocalWalletAppState.qml  ModuleEventIntake.qml  NodeOperationClient.qml  OperationHistoryVocabulary.js  RuntimeOperationClient.qml  SourceInspectionSession.qml  SourceOperationFlow.qml  SourceOperationSession.qml  StorageAppState.qml  WalletState.qml
qml/theme/: Theme.qml
qml/utils/: UiFormat.js  UiTone.js
scripts/: build_artifacts.py  build_pipeline.py  check-build-artifacts.py  check-build-pipeline.py  check-nix-tracked-source.py  check-package-identity.py  check-release-workflow.py  check-tracked-build-inputs.py  gui-navigation-e2e.sh  gui-visual-action-smoke.sh  package_identity.py  release_artifacts.py  setup-circuits.py  setup-circuits.sh  source_policy_artifact.py  standalone_release.py  zones-visual-smoke.sh
src/: accounts.rs  basecamp_source.rs  blockchain.rs  borsh_decode.rs  bridge.rs  bridge_envelope.rs  capabilities.rs  channels.rs  cli.rs  gui.rs  idl.rs  indexer.rs  inspection.rs  inspector_commands.rs  inspector_dispatch.rs  json_value.rs  lez.rs  lib.rs  local_indexer.rs  local_nodes.rs  logoscore.rs  main.rs  module_sources.rs  modules.rs  network.rs  node_operations.rs  overview.rs  probe.rs  public_surface.rs  rpc.rs  sequencer.rs  settings_backup.rs  social.rs  source_policy.rs  source_selection.rs  spel.rs  state_store.rs  testnet.rs  transaction_idl_tests.rs  transactions.rs  (+2 more)
src/blockchain/: bedrock.rs  channel_operations.rs  channels.rs  mod.rs
src/capabilities/: availability.rs  catalog.rs  diagnostics_evidence.rs  evidence.rs  runtime_evidence.rs  runtime_inputs.rs  state_rulebook.rs
src/cli/: args.rs  io.rs  planner.rs  runtime.rs
src/decode/: borsh.rs  idl_type.rs  instruction_codec.rs  instruction_variant.rs  mod.rs  reports.rs  selection.rs  session.rs  transaction_tests.rs
src/gui/: planner.rs
src/idl_decode/: decode.rs  interaction.rs  mod.rs  session.rs  transaction_tests.rs
src/inspection/: catalog.rs  l2.rs  mod.rs  rpc.rs  sources.rs  zones.rs
src/inspector/: bridge.rs  command_catalog.rs  command_surface.rs  commands.rs  dispatch_catalog.rs  mod.rs  operations.rs  runtime_methods.rs  value.rs
src/lez/: accounts.rs  block.rs  block_list_report.rs  idl_resolver.rs  mod.rs  programs.rs  sequencer.rs  session.rs  target_decode.rs  target_resolution.rs  tests.rs  transaction_decode_tests.rs  transactions.rs  transfers.rs
src/local_nodes/: action_engine.rs  action_workspace.rs  channel_indexer.rs  commands.rs  config.rs  host.rs  lifecycle.rs  local_indexer.rs  messaging_identity.rs  mod.rs  model.rs  module_watcher.rs  package.rs  paths.rs  presentation.rs  process.rs  runtime.rs  time.rs  workflow.rs
src/modules/: base.rs  delivery.rs  logos_core.rs  mod.rs  storage.rs
src/social/: collaboration.rs  comments.rs  delivery_store.rs  payload.rs  shared_idl.rs  topic.rs
src/source_routing/: adapter.rs  basecamp.rs  channel_sources.rs  inspection.rs  mod.rs  network_profiles.rs  operation.rs  policy.rs  probe_report.rs  reports.rs  selection.rs
src/support/: args.rs  config_path.rs  (+14 more)
tests/: api_surface.rs  cli_backup.rs
ui/: README.md  cargo-artifacts.js  cargo-artifacts.test.js  package.json  server.js
(+508 files in other folders)
