[package]
name = "logos-inspector"
version = "0.2.0-rc6"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/logos-blockchain/logos-inspector"
description = "Native CLI and GUI inspector for Logos networks"
publish = false

[workspace]
members = [".", "crates/core-ffi", "crates/standalone-gui"]
default-members = ["."]
resolver = "3"

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22"
borsh = "1.6"
clap = { version = "4.5", features = ["derive"], optional = true }
hex = "0.4"
k256 = { version = "0.13.3", features = ["ecdsa-core"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }

common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6", features = ["client"] }

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_imports = "deny"
unused_must_use = "deny"
warnings = { level = "deny", priority = -1 }

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
await_holding_lock = "deny"
dbg_macro = "deny"
expect_used = "deny"
indexing_slicing = "deny"
let_underscore_must_use = "deny"
manual_assert = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
