[package]
name = "logos-inspector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/logos-blockchain/logos-inspector"
description = "Native CLI and GUI inspector for Logos networks"
publish.workspace = true
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
build = false

[workspace]
members = [
  ".",
  "crates/core-ffi",
  "crates/standalone-gui",
]
exclude = [
  "crates/testnet-v02-helper",
  "crates/testnet-v02-helper-protocol",
]
default-members = ["."]
resolver = "3"

[workspace.package]
version = "0.2.0-rc7"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1.0.98"
cxx = "1.0"
cxx-qt = "0.9"
cxx-qt-build = "0.9"
cxx-qt-lib = "0.9"
logos-inspector = { path = ".", default-features = false }
serde = "1"
serde_json = "1"
tokio = "1"

[features]
default = ["cli", "development-testnet-v02-helper"]
cli = ["dep:clap"]
development-testnet-v02-helper = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "logos-inspector"
path = "src/main.rs"
required-features = ["cli"]

[[test]]
name = "api_surface"
path = "tests/api_surface.rs"

[[test]]
name = "cli_backup"
path = "tests/cli_backup.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
borsh = "1.6"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"], optional = true }
futures-util = "0.3"
getrandom = "0.3"
hex = "0.4"
hkdf = "0.12"
humantime = "2"
k256 = { version = "0.13.3", features = ["ecdsa-core"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redb = "4.1"
risc0-zkvm = "3.0.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.8"
tempfile = "3.27"
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2.5"
logos-inspector-testnet-v02-helper-protocol = { path = "crates/testnet-v02-helper-protocol" }

common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }
indexer_service_protocol = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6", features = ["convert"] }
lb-core = { package = "logos-blockchain-core", git = "https://github.com/logos-blockchain/logos-blockchain.git", rev = "d8711bbc3d43d3ef9755ef9b73af32fd0f703160" }
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6", features = ["client"] }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc6" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }

[lints]
workspace = true

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_imports = "deny"
unused_must_use = "deny"
warnings = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
await_holding_lock = "deny"
dbg_macro = "deny"
expect_used = "deny"
indexing_slicing = "deny"
let_underscore_must_use = "deny"
manual_assert = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
