[package]
name = "logos-inspector-core-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
build = false

[lib]
name = "logos_inspector_core"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
logos-inspector = { workspace = true, features = ["basecamp-wallet-provider"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_imports = "deny"
unused_must_use = "deny"
warnings = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
let_underscore_must_use = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
