[package]
name = "logos-inspector-standalone-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
static-rapidsnark-link = ["dep:rust-rapidsnark"]

[dependencies]
anyhow = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true, features = ["qt_gui", "qt_qml"] }
logos-inspector = { workspace = true }
rust-rapidsnark = { git = "https://github.com/logos-blockchain/logos-blockchain-rust-rapidsnark.git", rev = "e91187f8ccb5bbfc7bb00dac88169112428da78f", features = [
    "static-rapidsnark",
], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
cxx-qt-build = { workspace = true, features = ["link_qt_object_files"] }
