[package]
name = "logos-inspector-standalone-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
build = "build.rs"

[[bin]]
name = "logos-inspector-standalone-gui"
path = "src/main.rs"

[features]
default = ["development-testnet-v02-helper"]
development-testnet-v02-helper = ["logos-inspector/development-testnet-v02-helper"]
static-rapidsnark-link = ["dep:rust-rapidsnark"]

[dependencies]
anyhow = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true, features = ["qt_gui", "qt_qml"] }
logos-inspector = { workspace = true }
rust-rapidsnark = { git = "https://github.com/logos-blockchain/logos-blockchain-rust-rapidsnark.git", rev = "e91187f8ccb5bbfc7bb00dac88169112428da78f", features = [
    "static-rapidsnark",
], optional = true }
serde_json = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true, features = ["link_qt_object_files"] }
