[package]
name = "logos-inspector-testnet-v02-helper-protocol"
version = "0.2.0-rc6"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
